# Coding-Project

./: .code-workspace  .continueignore  .eslintrc.json  .gitattributes  .gitignore  .htmlhintrc  .project  .vscodeignore  Jenkinsfile  README.md  add_all_folders.ps1  answer.txt  cspell.json  log.txt  main.py  package-lock.json  package.json  pom.xml  pyrightconfig.json  students.db
.continue/: continue_config.yaml
.history-memo/: 2025-11-01.md  2025-11-02.md
Backup/: README-Python.txt  dependencies.txt  devDependencies.txt  npm-packages-global.txt  npm-packages-local.txt  package.json  pip-list.txt  python-restore.ps1  python-versions.txt  requirements.txt  restore.ps1  versions.txt
Clion/: Instructions.cpp  main.cpp
Programming Languages/Rust/Workspace/Project Files/Chatting App/chatting-app/: Cargo.toml  test_script.sh
Programming Languages/Rust/Workspace/Project Files/Chatting App/chatting-app/src/: main.rs
Programming Languages/Rust/Workspace/Project Files/Chatting App/chatting-app/src/database/: mod.rs
Programming Languages/Rust/Workspace/Project Files/Chatting App/chatting-app/src/routes/: dto.rs  handlers.rs  mod.rs
Programming Languages/Rust/Workspace/Projects/zero2prod/: Cargo.toml  configuration-test.yaml  configuration.yaml
Programming Languages/Rust/Workspace/Projects/zero2prod/src/: lib.rs  main.rs
Programming Languages/Rust/Workspace/Projects/zero2prod/src/routes/: mod.rs
Programming Languages/Rust/Workspace/Projects/zero2prod/src/startup/: mod.rs
Programming Languages/Rust/Workspace/Projects/zero2prod/tests/: test.rs
Projects/Finished Projects/Docker/Terraform/projects/Whatsapp/whatsapp-backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  test_script.sh
Projects/Finished Projects/Docker/Terraform/projects/Whatsapp/whatsapp-backend/migrations/: 20260613083030_alter_tables.sql  20260613084320_alter_tables_1.sql
Projects/Finished Projects/Docker/Terraform/projects/Whatsapp/whatsapp-backend/src/: database.rs  main.rs  models.rs
Projects/Finished Projects/Docker/Terraform/projects/Whatsapp/whatsapp-backend/src/routes/: dto.rs  handlers.rs  mod.rs  utils.rs
(+2390 files in other folders)
