[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.13.0"
reqwest = "0.13.4"
tokio = "1.52.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.23"
uuid = { version = "1.23.2", features = ["v4"] }
chrono = "0.4.45"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies.sqlx]
version = "0.9.0"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]




