[package]
name = "chatting-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
env = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["serde", "v4"] }
