[package]
name = "whatsapp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
uuid = { version = "1", features = ["serde", "v4"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"

[profile.release]
opt-level = 3
